Closed
Bug 200048
Opened 23 years ago
Closed 23 years ago
"Set as New Bookmark Folder / New Personal Toolbar" not working
Categories
(SeaMonkey :: Bookmarks & History, defect, P3)
SeaMonkey
Bookmarks & History
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4final
People
(Reporter: nahor.j+bugmoz, Assigned: janv)
References
Details
(Keywords: regression, Whiteboard: [adt3])
Attachments
(1 file)
|
8.77 KB,
patch
|
jag+mozilla
:
review+
sspitzer
:
superreview+
sspitzer
:
approval1.4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030331
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030331
The "View | Set as New Bookmark Folder" item in the Bookmark Manager doesn't
have any effet.
Reproducible: Always
Steps to Reproduce:
1.Select a folder.
2.Select the menu "View | Set as New Bookmark Folder"
3.Go to any web page
4.Press "Ctrl+D" or select the menu item "Bookmarks | Bookmark this page"
5.Open the bookmark manager and look for the new bookmarked page
Actual Results:
The bookmark is appended at the end of the bookmark list (child of the root
folder, aka "Bookmarks for <profile name>").
Expected Results:
The bookmark appended to the folder selected when I click on "Set as New
Bookmark Folder"
Bookmarks aren't appended to the correct folder since the checking of the new
bookmark infrastructure.
Comment 2•23 years ago
|
||
Nahor, are you seeing an error in the Javascript console?
Comment 3•23 years ago
|
||
Confirming the bug.
Here's the JavaScript Console error on setting a different "New" folder:
Error: [Exception... "Component returned failure code: 0x80070057
(NS_ERROR_ILLEGAL_VALUE) [nsIXULTreeBuilder.getResourceAtIndex]"
nsresult: "0x80070057 (NS_ERROR_ILLEGAL_VALUE)" location: "JS frame ::
chrome://communicator/content/bookmarks/bookmarksTree.xml#bookmarks-tree.getRowResource()
:: getRowResource :: line 2" data: no]
Source File:
chrome://communicator/content/bookmarks/bookmarksTree.xml#bookmarks-tree.getRowResource()
Line: 2
Actually doing a Bookmark This Page function doesn't produce an error.
Also, it's doing more than just not working. I already had a "New Bookmark
Folder" in place. (Which didn't work any more.) But as soon as I set a
different bookmark folder as the "New" folder, the Bookmark Manager (while
marking the other one as new, even though it still doesn't work) decided to put
"rdf:#$V++Kq1" under the Location field of my previous "new" folder. It's also
greyed out the option to delete it so I can't do anything to get rid of it.
Additionally, it's marked the Location field of my updated "New" folder with
"NC: PersonalToolbarFolder". I suppose that makes sense, but I'm not used to
ever seeing anything listed in the Location field for any of my folders in the
past. (I will restore a backup copy of my bookmarks.html file to clean up this
mess.)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•23 years ago
|
||
I should have mentioned that I'm also using XP with the 3/31-08 build.
Updated•23 years ago
|
Keywords: regression
I get the same error from comment #3 but only I do a "bookmark this page" or
when I delete the bookmark. I don't get any error when I select "Set as New
Bookmark Folder".
Actually, it seems worse than I thought, it looks like it isn't just the "New
Bookmark Folder" that doesn't work but "Set as Personal Folder" too. I don't
know what "New Internet Search Folder" is supposed to do so I can't really test
this it but a 'NEW_SEARCH_FOLDER="true"' is correctly added in the
bookmarks.html file.
Comment 6•23 years ago
|
||
Nav triage team: nsbeta1+/adt3
| Assignee | ||
Updated•23 years ago
|
Priority: -- → P3
Target Milestone: --- → mozilla1.4beta
Comment 8•23 years ago
|
||
*** Bug 201940 has been marked as a duplicate of this bug. ***
Comment 9•23 years ago
|
||
Note that bug 201940 mentions that it doesn't work for "New Personal Toolbar
Folder" either, so I'm changing the summary.
I can confirm both bugs on the 20030412 build on Mac OS X 10.2.5 (it was driving
me nuts this weekend), so All/All.
OS: Windows XP → All
Hardware: PC → All
Summary: "Set as New Bookmark Folder" not working → "Set as New Bookmark Folder / New Personal Toobar" not working
Comment 10•23 years ago
|
||
Confirming this report. I can reproduce the problem on
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030401
This is a clear regression from the way 1.3 was working.
Comment 11•23 years ago
|
||
I have the same problem with Linux build 2003050714, but I get this JavaScript
error:
Error: uncaught exception: [Exception... "Cannot find interface information for
parameter arg 0 [nsIBookmarksService.transactionManager]" nsresult: "0x80570006
(NS_ERROR_XPC_CANT_GET_PARAM_IFACE_INFO)" location: "JS frame :: <unknown
filename> :: onxblconstructor :: line 2" data: no]
Comment 12•23 years ago
|
||
Confirming with 1.4b on Windows XP.
Updated•23 years ago
|
Flags: blocking1.4? → blocking1.4+
Comment 13•23 years ago
|
||
*** Bug 205739 has been marked as a duplicate of this bug. ***
Comment 14•23 years ago
|
||
Changing summary from "toobar" to "toolbar" in order to make it more easy to
find this bug ;)
Summary: "Set as New Bookmark Folder / New Personal Toobar" not working → "Set as New Bookmark Folder / New Personal Toolbar" not working
Comment 15•23 years ago
|
||
I see the same error as comment #11 in the Linux 1.4b gtk2 build, 1.3 didn't
have this. Build ID is 2003050809. I can't delete any bookmarks, but I can
still add new ones via "bookmark this page".
| Assignee | ||
Comment 16•23 years ago
|
||
I have a fix for "Set as New Bookmark Folder", the latter is more difficult to
fix and the patch in bug 205378 must land first.
Status: NEW → ASSIGNED
Comment 17•23 years ago
|
||
*** Bug 205941 has been marked as a duplicate of this bug. ***
Comment 18•23 years ago
|
||
Verifying that Set as New Bookmark Folder is functioning properly in the
2003-05-27-03 Macho and 2003-05-27-08 Win32 trunk builds. Still need a fix for
"Set as Personal Toolbar Folder" in this bug though.
Comment 19•23 years ago
|
||
205378 is fixed on trunk and is approved for checkin to 1.4, so getting a fix to
this one would be great.
| Assignee | ||
Comment 20•23 years ago
|
||
I'm working on a fix, but it's not trivial.
| Assignee | ||
Comment 21•23 years ago
|
||
ok, here it is
| Assignee | ||
Comment 22•23 years ago
|
||
This patch also fixes bug 207394. We need to get this in ASAP to bake it on the
trunk first.
Target Milestone: mozilla1.4beta → mozilla1.4final
Updated•23 years ago
|
Attachment #125030 -
Flags: superreview?(jaggernaut)
| Assignee | ||
Updated•23 years ago
|
Attachment #125030 -
Flags: review?(ben)
Comment 23•23 years ago
|
||
Comment on attachment 125030 [details] [diff] [review]
patch
+ else {
+ // Do nothing.
+ rv = NS_OK;
+ }
No need for this, if you've reached this code you know that NS_SUCCEEDED(rv)
before the first |if| and that rv hasn't changed since.
+ rv = CopyResource(tempResource, aFolder);
+
+ return rv;
Just make this |return CopyResource(...);|
Could you add a comment above the first CopyResource along the lines of //
swap(aFolder, kNC_PersonalToolbarFolder);?
r=jag with that, or sr= if you can find someone to r=.
Attachment #125030 -
Flags: superreview?(sspitzer)
Attachment #125030 -
Flags: superreview?(jaggernaut)
Attachment #125030 -
Flags: review?(ben)
Attachment #125030 -
Flags: review+
Comment 24•23 years ago
|
||
Re: comment 23 about coalescing a function call and a return.
In a review at bug 177280 comment 56, Darin Fisher asked someone to split up a
|return function()|. The same reasoning would seem to apply here.
| Assignee | ||
Comment 25•23 years ago
|
||
I don't see any code size difference (linux, gcc 3.3)
Comment 26•23 years ago
|
||
Comment on attachment 125030 [details] [diff] [review]
patch
sr=sspitzer
Attachment #125030 -
Flags: superreview?(sspitzer) → superreview+
| Assignee | ||
Comment 27•23 years ago
|
||
fixed on the trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•23 years ago
|
Attachment #125030 -
Flags: approval1.4?
Comment 28•23 years ago
|
||
Comment on attachment 125030 [details] [diff] [review]
patch
a=sspitzer for 1.4, since asa has already listed this as a 1.4 blocker.
Attachment #125030 -
Flags: approval1.4? → approval1.4+
Comment 29•23 years ago
|
||
a=adt. Please land on branch and add fixed1.4 keyword.
Comment 31•23 years ago
|
||
Verified on both the Macho and Win32 branch (2003-06-09-05) and (2003-09-08)
trunk builds.
Status: RESOLVED → VERIFIED
Keywords: fixed1.4 → verified1.4
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•