Fix for bug 200048. "Set as New Bookmark Folder / New Personal Toolbar" not working. r=jag, sr=sspitzer